--- a/Test_Train_Curve.ipynb
+++ b/Test_Train_Curve.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -118,6 +118,13 @@
     "      weights = weight_variable([receptive_field, receptive_field, channels_in, channels_out])\n",
     "      variable_summaries(weights)\n",
     "      \n",
+    "      if layer_name == 'conv1':\n",
+    "        weight_min = tf.reduce_min(weights)\n",
+    "        weight_max = tf.reduce_max(weights)\n",
+    "        weights_0_to_1 = (weights - weight_min) / (weight_max - weight_min)\n",
+    "        weights_transposed = tf.transpose(weights_0_to_1, [3, 0, 1, 2])\n",
+    "        tf.summary.image('filter', weights_transposed, 10) # Just follow 10 feature maps\n",
+    "\n",
     "      if decay > 0:\n",
     "          weight_decay = tf.multiply(tf.nn.l2_loss(weights), decay, name='weight_decay')\n",
     "          tf.add_to_collection('losses', weight_decay)\n",
@@ -174,19 +181,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def run():\n",
-    "  ts = datetime.now().strftime('%Y%m%d_%H%M')\n",
-    "  logs_path = \"logs/{}/\".format(ts)\n",
-    "\n",
     "  # RESET TF GRAPH, just in case\n",
     "  tf.reset_default_graph()\n",
+    "  \n",
+    "  sess = tf.InteractiveSession() ###### May need to change for .py files\n",
     "\n",
+    "  ts = datetime.now().strftime('%Y%m%d_%H%M')\n",
+    "  logs_path = \"logs/{}/\".format(ts)\n",
+    "  \n",
     "  # Input placeholders\n",
     "  with tf.name_scope('input'):\n",
     "    x = tf.placeholder(tf.float32, shape=[None, image_size*image_size, input_channels], name=\"x-input\") \n",
@@ -194,35 +203,41 @@
     "\n",
     "  with tf.name_scope('input_reshape'):\n",
     "    image_shaped_input = tf.reshape(x, [-1, image_size, image_size, input_channels])\n",
-    "    tf.summary.image('input', image_shaped_input, 10)\n",
+    "    tf.summary.image('input', image_shaped_input, 5) # Save 5 images\n",
     "\n",
     "  conv1 = convlayer(layer_name='conv1', input_tensor=image_shaped_input, receptive_field=5, \n",
-    "                      channels_in=input_channels, channels_out=64, pool=True, pool_size=3, pool_stride=2)\n",
+    "                      channels_in=input_channels, channels_out=64, pool=True, pool_size=2, pool_stride=2)\n",
     "\n",
-    "  conv2 = convlayer(layer_name='conv2', input_tensor=conv1, receptive_field=5, \n",
-    "                    channels_in=64, channels_out=64, pool=True, pool_size=3, pool_stride=2)\n",
+    "  training = tf.placeholder(tf.bool)\n",
+    "  with tf.name_scope('batchnorm1'):\n",
+    "    normed1 = tf.layers.batch_normalization(conv1, training=training)\n",
+    "  \n",
+    "  conv2 = convlayer(layer_name='conv2', input_tensor=normed1, receptive_field=5, \n",
+    "                    channels_in=64, channels_out=64, pool=True, pool_size=2, pool_stride=2)\n",
+    "  \n",
+    "  with tf.name_scope('batchnorm2'):\n",
+    "    normed2 = tf.layers.batch_normalization(conv2, training=training)\n",
     "\n",
     "  dim = 1 # Compute how many numbers we have, ignoring the batch size\n",
-    "  for d in conv2.get_shape()[1:].as_list():\n",
+    "  for d in normed2.get_shape()[1:].as_list():\n",
     "    dim *= d\n",
     "\n",
-    "  with tf.name_scope('conv2_reshape'):\n",
-    "    conv_shaped = tf.reshape(conv2, [-1, dim])\n",
+    "  with tf.name_scope('normed2_reshape'):\n",
+    "    conv_shaped = tf.reshape(normed2, [-1, dim])\n",
     "\n",
-    "  fc1 = nn_layer(layer_name='fc1', input_tensor=conv_shaped, input_dim=dim, output_dim=384, decay=init_decay)\n",
+    "  fc1 = nn_layer(layer_name='fc1', input_tensor=conv_shaped, input_dim=dim, output_dim=512, decay=init_decay)\n",
     "\n",
-    "  with tf.name_scope('dropout'):\n",
-    "    keep_prob = tf.placeholder(tf.float32)\n",
-    "    tf.summary.scalar('dropout_keep_probability', keep_prob)\n",
-    "    dropped = tf.nn.dropout(fc1, keep_prob)\n",
+    "  keep_prob = tf.placeholder(tf.float32)\n",
+    "  tf.summary.scalar('dropout_keep_probability', keep_prob)\n",
+    "  \n",
+    "  dropped = tf.nn.dropout(fc1, keep_prob)\n",
     "\n",
-    "  fc2 = nn_layer(layer_name='fc2', input_tensor=fc1, input_dim=384, output_dim=192, decay=init_decay)\n",
+    "  fc2 = nn_layer(layer_name='fc2', input_tensor=dropped, input_dim=512, output_dim=256, decay=init_decay)\n",
     "\n",
-    "  with tf.name_scope('dropout2'):\n",
-    "    dropped2 = tf.nn.dropout(fc2, keep_prob)\n",
+    "  dropped2 = tf.nn.dropout(fc2, keep_prob)\n",
     "\n",
     "  # Do not apply softmax activation yet! use the identity\n",
-    "  y = nn_layer(layer_name='output', input_tensor=dropped2, input_dim=192, output_dim=10, act=tf.identity) \n",
+    "  y = nn_layer(layer_name='output', input_tensor=dropped2, input_dim=256, output_dim=10, act=tf.identity) \n",
     "  \n",
     "  with tf.name_scope('cross_entropy'):\n",
     "    # The raw formulation of cross-entropy,\n",
@@ -250,15 +265,10 @@
     "      accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
     "  tf.summary.scalar('accuracy', accuracy)\n",
     "\n",
-    "  sess = tf.InteractiveSession()\n",
-    "\n",
     "  # Merge all the summaries and write them out\n",
     "  merged = tf.summary.merge_all()\n",
     "  train_writer = tf.summary.FileWriter(logs_path + '/train', sess.graph)\n",
     "  test_writer = tf.summary.FileWriter(logs_path + '/test')\n",
-    "\n",
-    "  tf.global_variables_initializer().run()\n",
-    "\n",
     "\n",
     "  # Normalize by subtracting per image, per channel means\n",
     "  def normalize_batch(batch):\n",
@@ -274,18 +284,28 @@
     "    if mode == 'Train':\n",
     "      batch_x, batch_y = svhn_train.next_batch(batch_size)\n",
     "      keep_proba = train_keep_prob\n",
+    "      training_ = True\n",
     "    elif mode == 'Test':\n",
     "      batch_x, batch_y = svhn_test.next_batch(test_batch_size)\n",
     "      keep_proba = 1.0\n",
+    "      training_ = False\n",
     "    elif mode == 'Train_no_drop':\n",
     "      batch_x, batch_y = svhn_train.next_batch(batch_size)\n",
-    "      keep_proba = 1.0      \n",
+    "      keep_proba = 1.0\n",
+    "      training_ = True\n",
     "    elif mode == 'Final':\n",
     "      batch_x, batch_y = svhn_test.next_batch(svhn_test.num_examples)\n",
     "      keep_proba = 1.0      \n",
+    "      training_ = False\n",
     "    batch_x = normalize_batch(batch_x)\n",
-    "    return {x: batch_x, y_: batch_y, keep_prob: keep_proba}\n",
+    "    return {x: batch_x, y_: batch_y, keep_prob: keep_proba, training: training_}\n",
     "\n",
+    "  # For batch norm\n",
+    "  extra_update_ops = tf.get_collection(tf.GraphKeys.UPDATE_OPS)\n",
+    "  \n",
+    "  tf.global_variables_initializer().run()\n",
+    "\n",
+    "  \n",
     "  for epoch in xrange(training_epochs):\n",
     "    for batch_num in xrange(total_batches):\n",
     "      if batch_num % test_every == test_every - 1:  \n",
@@ -295,16 +315,17 @@
     "        print('Test accuracy at epoch %s - batch %s: %s' % (epoch, batch_num, acc))\n",
     "\n",
     "        # Now proceed to produce training summary too\n",
-    "        summary, _ = sess.run([merged, train_step], feed_dict=feed_dict(mode='Train_no_drop'))\n",
+    "        summary, _, _ = sess.run([merged, train_step, extra_update_ops], feed_dict=feed_dict(mode='Train_no_drop'))\n",
     "        train_writer.add_summary(summary, epoch * total_batches + batch_num)\n",
     "      else:\n",
-    "        sess.run([train_step], feed_dict=feed_dict(mode='Train'))\n",
+    "        sess.run([train_step, extra_update_ops], feed_dict=feed_dict(mode='Train'))\n",
     "        \n",
     "        \n",
     "  print \"\\nOptimization Finished!\\n\"\n",
     "  \n",
-    "  acc = sess.run([accuracy], feed_dict=feed_dict(mode='Final'))\n",
-    "  print('Accuracy at finish: %s' % (acc))\n",
+    "  if full_at_end:\n",
+    "    acc = sess.run([accuracy], feed_dict=feed_dict(mode='Final'))\n",
+    "    print('Accuracy at finish: %s' % (acc))\n",
     "\n",
     "  print \"-\"* 70\n",
     "  pwd = os.getcwd()+\"/\"\n",
@@ -317,29 +338,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy at epoch 0 - batch 63: 0.182168\n",
+      "Test accuracy at epoch 0 - batch 127: 0.218294\n",
+      "Test accuracy at epoch 0 - batch 191: 0.235972\n",
+      "Test accuracy at epoch 0 - batch 255: 0.262875\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-e2043adcec04>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mtrain_keep_prob\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.975\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-9-b70db9c77116>\u001b[0m in \u001b[0;36mrun\u001b[1;34m()\u001b[0m\n\u001b[0;32m    130\u001b[0m         \u001b[0mtrain_writer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_summary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msummary\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mtotal_batches\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mbatch_num\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    131\u001b[0m       \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 132\u001b[1;33m         \u001b[0msess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtrain_step\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextra_update_ops\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfeed_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Train'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    133\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    134\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m    776\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    777\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[1;32m--> 778\u001b[1;33m                          run_metadata_ptr)\n\u001b[0m\u001b[0;32m    779\u001b[0m       \u001b[1;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    780\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_run\u001b[1;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m    980\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    981\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[1;32m--> 982\u001b[1;33m                              feed_dict_string, options, run_metadata)\n\u001b[0m\u001b[0;32m    983\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    984\u001b[0m       \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_do_run\u001b[1;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m   1030\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1031\u001b[0m       return self._do_call(_run_fn, self._session, feed_dict, fetch_list,\n\u001b[1;32m-> 1032\u001b[1;33m                            target_list, options, run_metadata)\n\u001b[0m\u001b[0;32m   1033\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1034\u001b[0m       return self._do_call(_prun_fn, self._session, handle, feed_dict,\n",
+      "\u001b[1;32m/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_do_call\u001b[1;34m(self, fn, *args)\u001b[0m\n\u001b[0;32m   1037\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1038\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1039\u001b[1;33m       \u001b[1;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1040\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1041\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_run_fn\u001b[1;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[0;32m   1019\u001b[0m         return tf_session.TF_Run(session, options,\n\u001b[0;32m   1020\u001b[0m                                  \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1021\u001b[1;33m                                  status, run_metadata)\n\u001b[0m\u001b[0;32m   1022\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1023\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "##########################################\n",
     "##                                      ##\n",
     "##              Parameters              ##\n",
     "##                                      ##\n",
     "##########################################\n",
-    "# Training Parameters\n",
+    "\n",
     "learning_rate = 0.001\n",
-    "training_epochs = 3\n",
+    "training_epochs = 10 # 10 epochs\n",
     "\n",
-    "batch_size = 32 # 128\n",
-    "total_batches = int(0.1 * svhn_train.num_examples / batch_size) # train on 10% of the data\n",
+    "batch_size = 48 # 128\n",
+    "total_batches = int(svhn_train.num_examples / batch_size) # train on all of the data\n",
     "\n",
-    "test_every = 32 # record test accuracy every 32 batches\n",
-    "test_batch_size = int(0.1*svhn_test.num_examples) # test on 10% of the data\n",
+    "test_every = 100 # record test accuracy every\n",
+    "test_batch_size = int(0.075*svhn_test.num_examples) # test on 7.5% of the data\n",
+    "full_at_end = False\n",
     "\n",
-    "# Keep probability \n",
-    "train_keep_prob = 1.0 # no drop out\n",
+    "train_keep_prob = 0.975\n",
     "\n",
     "run()"
    ]
@@ -348,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# To Do"
+    "# Optional: Gradients"
    ]
   },
   {
@@ -359,52 +408,22 @@
    },
    "outputs": [],
    "source": [
+    "# # Place near the optimizer\n",
     "# with tf.name_scope('Optimizer'):\n",
     "#     optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
     "    \n",
-    "#     # Op to calculate every variable gradient\n",
+    "#     ### Op to calculate every variable gradient ###\n",
     "#     grads = tf.gradients(loss, tf.trainable_variables())\n",
     "#     grads = list(zip(grads, tf.trainable_variables()))\n",
     "    \n",
-    "#     # Op to update all variables according to their gradient\n",
+    "#     ### Op to update all variables according to their gradient ###\n",
     "#     apply_grads = optimizer.apply_gradients(grads_and_vars=grads)\n",
     "\n",
-    "# # Summaries to visualize gradients\n",
-    "# for grad, var in grads:\n",
-    "#     var_name = var.name.replace(\":\", \"_\") # to suppress the pesky warning\n",
-    "#     tf.summary.histogram(var_name + '_gradient', grad)"
+    "#     # Summaries to visualize gradients\n",
+    "#     for grad, var in grads:\n",
+    "#         var_name = var.name.replace(\":\", \"_\") # to suppress the pesky warning\n",
+    "#         tf.summary.histogram(var_name + '_gradient', grad)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# http://stackoverflow.com/questions/34696845/how-to-see-multiple-images-through-tf-image-summary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# https://stackoverflow.com/questions/33949786/how-could-i-use-batch-normalization-in-tensorflow/38325288#38325288"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
